--- a/todo-app/src/app/list/Item.css
+++ b/todo-app/src/app/list/Item.css
@@ -1,4 +1,5 @@
 .item {
+  cursor: pointer;
   display: inline-block;
   font-size: 20px;
   color: #327a91;
@@ -26,4 +27,8 @@
   height: 30px;
   cursor: pointer;
   padding: 0 0 0 14px;
+}
+.item-selected {
+  background: #72b7c396;
+  border-radius: 8px;
 }
